2004-04-21  Not Zed  <NotZed@Ximian.com>

	* camel-disco-folder.c (disco_refresh_info_online): implement
	dummy virtual method.

	* providers/nntp/camel-nntp-folder.c
	(nntp_folder_refresh_info_online): implement.  Fixes #57280.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-folder.c (untagged_fetch): Fixed to
	not expect ]'s as part of the BODY atom token.

2004-04-16  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-vee-store.c (change_folder): (flags & 0) will never be
	true. Fixes bug #56982.

2004-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-utils.c: Changed imap_atom_specials[]
	to not treat ']' as an atom char (as per rfc3501). Fixes bug
	#50985.

2004-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-store.c
	(imap_check_folder_still_extant): Use %F instead of %S so that the
	folder name gets properly converted from using '/' path delimeters
	to whatever the native character the server uses. Should fix bug
	#56715.

2004-04-14  Not Zed  <NotZed@Ximian.com>

	* camel-disco-store.c (set_status): do offline mail syncing (only
	for open folders so far).  If we fail doing syncing or store sync,
	don't abort.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-store.c (get_folder_online):
	Rearranged some error checking code to fix bug #56405.

2004-04-13  Not Zed  <NotZed@Ximian.com>

	* camel-folder.c (folder_getv): implement the new counts, and get
	them all atomically so they're only calculated once and can return
	consistent results.

	* camel-folder.h: Added CAMEL_FOLDER_DELETED, CAMEL_FOLDER_JUNKED,
	and CAMEL_FOLDER_VISIBLE args, to support client display of
	various values.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-folder.h (camel_folder_delete_message): Fix NotZed's fix
	to not mark messages as unseen. Fixes bug #56879.

2004-04-13   Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/camel-gw-listener.c