@@ -1,5 +1,8 @@
 2004-04-21  Not Zed  <NotZed@Ximian.com>
 
+	* providers/nntp/camel-nntp-folder.c (camel_nntp_folder_new): set
+	the meta data file on nntp folders.
+
 	* camel-disco-folder.c (disco_refresh_info_online): implement
 	dummy virtual method.
 
